--- a/js.4.5
+++ b/js.4.5
@@ -1,173 +1,121 @@
-<!doctype html>
-<html>
-	<head>
-		<title>canvasExample</title>
-        <meta charset='utf-8' />
-		<style>
-		a.button.purple {
-    background: #e8c4e4;
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e8c4e4), to(#d698d0));
-    background: -moz-linear-gradient(#e8c4e4, #d698d0);
-    background: linear-gradient(#e8c4e4, #d698d0);
-    border: solid 1px #da9fd4;
-    border-bottom: solid 3px #946890;
-    box-shadow: inset 0 0 0 1px #f2dcef;
-    color: #7b5777;
-    text-shadow: 0 1px 0 #eacae6; }
-    
-a.button.purple:hover {
-    background: #daa2d4;
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#daa2d4), to(#e0b1db));
-    background: -moz-linear-gradient(#daa2d4, #e0b1db);
-    background: linear-gradient(#daa2d4, #e0b1db);
-    border: solid 1px #ca91c4;
-    border-bottom: solid 3px #946890;
-    box-shadow: inset 0 0 0 1px #e9c7e6; }
-    
-a.button.purple:active {
-    background: #d49ace;
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#d49ace), to(#cc94c6));
-    background: -moz-linear-gradient(#d49ace, #cc94c6);
-    background: linear-gradient(#d49ace, #cc94c6);
-    border: solid 1px #8e678a;
-    box-shadow: inset 0 10px 15px 0 #ba87b5; }
-</style>
-        		<script>
-function clean(){
-var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.fillStyle = "white";
-ctx.fillRect(0, 0, 640, 480);
-}
-		function er1(){
-		   x=document.getElementById("x_znach").value;
-		 y=document.getElementById("y_znach").value;
-var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.arc(x, y, 2, 0, 2*Math.PI);
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
+<!doctype html> 
+<html> 
+<head> 
+<title>canvasExample</title> 
+<meta charset='utf-8' /> 
+<style> 
+a.button.purple { 
+background: #e8c4e4; 
+background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e8c4e4), to(#d698d0)); 
+background: -moz-linear-gradient(#e8c4e4, #d698d0); 
+background: linear-gradient(#e8c4e4, #d698d0); 
+border: solid 1px #da9fd4; 
+border-bottom: solid 3px #946890; 
+box-shadow: inset 0 0 0 1px #f2dcef; 
+color: #7b5777; 
+text-shadow: 0 1px 0 #eacae6; } 
 
-ctx.moveTo(300, 230);
-ctx.lineTo(300, 0);
-ctx.moveTo(300, 230);
-ctx.lineTo(0, 230);
-ctx.stroke()
-}
+a.button.purple:hover { 
+background: #daa2d4; 
+background: -webkit-gradient(linear, 0 0, 0 bottom, from(#daa2d4), to(#e0b1db)); 
+background: -moz-linear-gradient(#daa2d4, #e0b1db); 
+background: linear-gradient(#daa2d4, #e0b1db); 
+border: solid 1px #ca91c4; 
+border-bottom: solid 3px #946890; 
+box-shadow: inset 0 0 0 1px #e9c7e6; } 
 
-function drawpoint(){
-   x=document.getElementById("x_znach").value;
-		 y=document.getElementById("y_znach").value;
-		 x=10*x+320
-		 y=10*y+240
-var canvas = document.getElementById('example');
-ctx.beginPath();
-ctx.arc(x, y, 2, 0, 2*Math.PI);
-  
-  
-}
-		function er2(){
-		 
-	var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
-ctx.stroke();
+a.button.purple:active { 
+background: #d49ace; 
+background: -webkit-gradient(linear, 0 0, 0 bottom, from(#d49ace), to(#cc94c6)); 
+background: -moz-linear-gradient(#d49ace, #cc94c6); 
+background: linear-gradient(#d49ace, #cc94c6); 
+border: solid 1px #8e678a; 
+box-shadow: inset 0 10px 15px 0 #ba87b5; } 
+</style> 
+<script> 
+function clean(){ 
+var canvas = document.getElementById('example'); 
+var ctx = canvas.getContext('2d'); 
+ctx.fillStyle = "white"; 
+ctx.fillRect(0, 0, 640, 480); 
+ctx.closePath(); 
 
+} 
+function er1(){ 
+  var canvas = document.getElementById('example');
+var ctx=canvas.getContext("2d");drawpoint();
+for(var i=-20;i<20;i+=0.01){
+    ctx.fillStyle="red"; // цвет квадратической параболы
+    ctx.fillRect(320+i*10,300-12*Math.pow(i,2),1,1);
 }
-		function er3(){
-	var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
-ctx.stroke();
-}
-		function er4(){
-	var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
-ctx.stroke();
-ctx.fill();
-}
-    function er5(){
-	var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
-ctx.stroke();
-ctx.fill();
-}
-    function er6(){
-	var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
-ctx.stroke();
-ctx.rect(340, 255, 300, 225);
-ctx.fill();
-}
-	  function er7(){
-	var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
-ctx.stroke();
-ctx.fill();
-}
-	  function er8(){
-	var canvas = document.getElementById('example');
-var ctx = canvas.getContext('2d');
-ctx.beginPath();
-ctx.moveTo(320, 0);
-ctx.lineTo(320, 480);
-ctx.moveTo(0, 240);
-ctx.lineTo(640, 240);
-ctx.stroke();
-ctx.rect(0, 225, 640, 10);
-ctx.rect(340, 0, 300,480);
+ctx.moveTo(320, 0); 
+ctx.lineTo(320, 480); 
+ctx.moveTo(0, 240); 
+ctx.lineTo(640, 240); 
 
-ctx.fill();
-}
+ctx.arc(320, 240, 40, 0, 2 * Math.PI)
+ctx.stroke(); 
 
-		</script>
-	</head>
-	<body>
-	   x=<input type="text" value="0" id="x_znach">
-		 y=<input type="text" value="0" id="y_znach"><br><br>
-<a href="#" onclick="clean()" class="button purple">Очистить</a>
-<a href="#" onclick="er1()" class="button purple">3.31а</a>
-<a href="#" onclick="er2()" class="button purple">3.31б</a>
-<a href="#" onclick="er3()" class="button purple">3.31в</a>
-<a href="#" onclick="er4()" class="button purple">3.31г</a>
-<a href="#" onclick="er5()" class="button purple">3.31д</a>
-<a href="#" onclick="er6()" class="button purple">3.31е</a>
-<a href="#" onclick="er7()" class="button purple">3.31ж</a>
-<a href="#" onclick="er8()" class="button purple">3.31з</a>
-<a href="#" onclick=" drawpoint()" class="button purple">точка</a>
-<br>
-	<canvas width='640' height='480' id='example'>Обновите браузер</canvas>
-	<br>
-	
+x=Number(document.getElementById("x_znach").value); 
+y=Number(document.getElementById("y_znach").value); 
+
+if ((x >=0 && y*y+x*x<=1600)) {
+document.getElementById("otvet").innerHTML = "Точка в области";
+} else {
+document.getElementById("otvet").innerHTML = "Точка не в области"; 
+}
+} 
+function er2(){ 
+var canvas = document.getElementById('example'); 
+var ctx = canvas.getContext('2d'); 
+ctx.beginPath(); 
+drawpoint();
+ctx.moveTo(320, 0); 
+ctx.lineTo(320, 480); 
+ctx.moveTo(0, 240); 
+ctx.lineTo(640, 240); 
+ctx.moveTo(170, 80); 
+ctx.bezierCurveTo(130, 100, 130, 150, 230, 150); 
+ctx.bezierCurveTo(250, 180, 320, 180, 340, 150); 
+ctx.bezierCurveTo(420, 150, 420, 120, 390, 100); 
+ctx.bezierCurveTo(430, 40, 370, 30, 340, 50); 
+ctx.bezierCurveTo(320, 5, 250, 20, 250, 50); 
+ctx.bezierCurveTo(200, 5, 150, 20, 170, 80); 
+ctx.strokeStyle = "#F00"; 
+ctx.font = 'bold 30px sans-serif'; 
+ctx.strokeText("SUPREME", 200, 120); 
+ctx.closePath(); 
+ctx.strokeStyle = 'blue'; 
+ 
+ctx.stroke(); 
+
+
+} 
+function drawpoint() { 
+x=Number(document.getElementById("x_znach").value); 
+y=Number(document.getElementById("y_znach").value); 
+x=320+x; 
+y=240-y; 
+var canvas = document.getElementById('example'); 
+var ctx = canvas.getContext('2d'); 
+ctx.beginPath(); 
+ctx.strokeStyle = 'green'; 
+ctx.arc(x, y, 2, 0, 2 * Math.PI); 
+ctx.stroke(); 
+} 
+</script> 
+</head> 
+<body> 
+x=<input type="text" value="0" id="x_znach"> 
+y=<input type="text" value="0" id="y_znach"> 
+<a href="#" onclick="clean()" class="button purple">Очистить</a> 
+<a href="#" onclick="er1()" class="button purple">3.31а</a> 
+<a href="#" onclick="er2()" class="button purple">3.31б</a> 
+<br> 
+<canvas width='640' height='480' id='example'>Обновите браузер</canvas> 
+<br> 
+
+<div id="otvet"></div>
+</body> 
+
 </html>
